--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             labels: data.tiempo,
             datasets: [
               {
-                label: 'Lluvia (mm)',
+                label: 'Lluvia (mm2)',
                 data: data.lluvia,
                 borderColor: 'blue',
                 fill: false,
